--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
-duopoly_dealer_1_price.csv
-duopoly_dealer_2_price.csv
-monopoly_dealer_price.csv
+Duopoly_Simulation/duopoly_stats_delta0.csv
+Duopoly_Simulation/duopoly_stats_delta4.csv
+Duopoly_Simulation/duopoly_stats_delta2.csv
+Duopoly_Simulation/duopoly_stats_delta6.csv
+Duopoly_Simulation/duopoly_stats_delta8.csv
+Duopoly_Simulation/duopoly_stats_sigma_0_5.csv
+Duopoly_Simulation/duopoly_stats_sigma_1.csv
+Duopoly_Simulation/duopoly_stats_sigma_2.csv
+Duopoly_Simulation/duopoly_stats_sigma_3.csv
+Duopoly_Simulation/duopoly_stats_sigma_4.csv
+Duopoly_Simulation/duopoly_stats_sigma_5.csv
+Duopoly_Simulation/duopoly_stats_sigma_6.csv
+Duopoly_Simulation/duopoly_stats_sigma_7.csv
+Duopoly_Simulation/duopoly_stats_sigma_8.csv
+Duopoly_Simulation/duopoly_stats_sigma_9.csv
+Monopoly_Simulation/monopoly_dealer_price.csv
+Monopoly_Simulation/monopoly_stats_delta0.csv
+Monopoly_Simulation/monopoly_stats_delta2.csv
+Monopoly_Simulation/monopoly_stats_delta4.csv
+Monopoly_Simulation/monopoly_stats_delta6.csv
+Monopoly_Simulation/monopoly_stats_delta8.csv
+Monopoly_Simulation/monopoly_stats_sigma0_5.csv
+Monopoly_Simulation/monopoly_stats_sigma1.csv
+Monopoly_Simulation/monopoly_stats_sigma2.csv
+Monopoly_Simulation/monopoly_stats_sigma3.csv
+Monopoly_Simulation/monopoly_stats_sigma4.csv
+Monopoly_Simulation/monopoly_stats_sigma5.csv
+Monopoly_Simulation/monopoly_stats_sigma6.csv
+Monopoly_Simulation/monopoly_stats_sigma7.csv
+Monopoly_Simulation/monopoly_stats_sigma8.csv
+Monopoly_Simulation/monopoly_stats_sigma9.csv
+Duopoly_Simulation/duopoly_dealer_1_price.csv
+Duopoly_Simulation/duopoly_dealer_2_price.csv
